fixed visual bug with too long subject names

--- a/style.css
+++ b/style.css
@@ -214,7 +214,6 @@ body {
 }
         #grades>.subject>h2 {
             font-weight: normal;
-            font-size: 2rem;
             margin: 0.5rem 0 0.5rem 0;
 
             min-height: 3rem;
@@ -222,6 +221,9 @@ body {
             display: flex;
             flex-direction: row;
         }
+            #grades>.subject>h2>.title {
+                font-size: 2rem;
+            }
             #grades>.subject>h2>.average {
                 font-weight: bold;
 
@@ -232,6 +234,7 @@ body {
                 margin-left: auto;
 
                 color: white;
+                font-size: 2rem;
 
                 border-radius: 1rem;
             }
